<resources>
    <string name="Hataroid_activity">Hataroid</string>
    <string name="Settings">Settings</string>
    <string name="Reset">Reset</string>
    <string name="Pause">Pause</string>
    <string name="Unpause">Unpause</string>
    <string name="Disk">Disk</string>
    <string name="FloppyA">Floppy A</string>
    <string name="FloppyB">Floppy B</string>
    <string name="ChangeDisk">Change Disk</string>
    <string name="Help">Help</string>
	<string name="About">About</string>
    <string name="Controls">Controls</string>
    <string name="input">Input</string>
    <string name="system">System</string>
    <string name="cputype">CPU Type</string>
    <string name="machinetype">Machine Type</string>
    <string name="cpuclock">CPU clock</string>
    <string name="memory">Memory</string>
    <string name="pref_system_main_category">Main</string>
    <string name="pref_system_rom_category">Rom</string>
    <string name="pref_system_tweaks_category">Tweaks</string>
    <string name="pref_system_devices_category">Devices</string>
    <string name="tosimage">TOS image (ST)</string>
    <string name="tosimage_ste">TOS image (STE)</string>
    <string name="tosimage_falcon">TOS image (Falcon)</string>
	<string name="emutos">Use built-in Emu-TOS</string>
	<string name="emutos_summary">Use the open-source Atari OS replacement</string>
    <string name="compatiblecpu">Slower but more compatible CPU</string>
    <string name="compatiblecpu_summary">Enables 68k address errors and CPU prefetch buffer</string>
    <string name="blitteremulation">Blitter emulation</string>
    <string name="blitteremulation_summary">Toggles blitter emulation (ST only), always enabled on STE</string>
    <string name="rtcemulation">Real time clock emulation</string>
    <string name="rtcemulation_summary">Requires TOS >= 1.02</string>
    <string name="patchtimerd">Patch Timer-D</string>
    <string name="patchtimerd_summary">Modifies the MFP timer D rate for improved performance</string>
    <string name="patchtosfasterboot">Patch TOS for faster boot</string>
    <string name="patchtosfasterboot_summary">By-passes the boot memory test</string>
    <string name="printeremulation">Printer Emulation</string>
    <string name="printeremulation_summary">Toggles printer emulation</string>
    <string name="rs232emulation">RS232 Emulation</string>
    <string name="rs232emulation_summary">Toggles RS232 emulation</string>
    <string name="sound_mute">Mute ST Sound</string>
    <string name="sound_mute_summary">Mute the ST sound output (allows MIDI output exclusively)</string>
    <string name="pref_input_joysticks_category">Joysticks</string>
    <string name="pref_input_mouse_category">Mouse</string>
    <string name="pref_input_keyboard_category">Keyboard</string>
    <string name="input_keyboard_obsession_keys">Obsession mode keys</string>
    <string name="input_keyboard_obsession_keys_summary">Swaps the joystick out with keys suited for Obsession</string>
    <string name="pref_input_onscreen_category">On-Screen</string>
    <string name="input_joystick_port">On-screen Joystick Port</string>
    <string name="input_joysticks_autofire">Autofire</string>
    <string name="input_joysticks_maparrowkeys">Map Arrow Keys</string>
    <string name="input_joysticks_maparrowkeys_summary">On-screen joystick presses map to the Arrow Keys and Space on the Keyboard</string>
    <string name="input_joysticks_size">Size of On Screen Joystick</string>
    <string name="input_joysticks_size_summary">Default size is 1.0</string>
	<string name="input_joysticks_vjstick">Arcade-style Virtual Joystick</string>
	<string name="input_joysticks_vjstick_summary">Use the new arcade-style virtual joystick</string>
	<string name="input_joysticks_vjstick_floating">Floating (Arcade Virtual Joystick)</string>
	<string name="input_joysticks_vjstick_floating_summary">New arcade-style joystick placed dynamically on screen based on finger position</string>
	<string name="input_joysticks_deadzone">Dead-zone (Arcade Virtual Joystick)</string>
	<string name="input_joysticks_deadzone_summary">Distance (%) from center before registering movement</string>
	<string name="input_joysticks_diag_sensitivity">Diagonal Sensitivity (Arcade Virtual Joystick)</string>
	<string name="input_joysticks_diag_sensitivity_summary">Detection area/arc for diagonal movement</string>
    <string name="input_onscreen_alpha">On Screen Transparency</string>
    <string name="input_onscreen_alpha_summary">Translucency of on screen controls</string>
    <string name="input_onscreen_joy_alpha">On Screen Joystick Transparency</string>
    <string name="input_onscreen_joy_alpha_summary">Translucency of on screen Joystick controls</string>
	<string name="input_onscreen_autohide">Auto hide on-screen UI</string>
	<string name="input_onscreen_autohide_summary">Auto hides UI if no touches detected</string>
    <string name="input_onscreen_hide_all">Hide all on screen UI</string>
    <string name="input_onscreen_hide_all_summary">Hides all on screen controls</string>
    <string name="input_onscreen_only_joy">Show joystick only</string>
    <string name="input_onscreen_only_joy_summary">Hides everything except for the on screen joystick</string>
    <string name="mouseemutype">Mouse Button Emulation Type</string>
    <string name="mousespeed">Mouse Emulation Speed</string>
    <string name="device">Device</string>
    <string name="device_kitkat_immersive">Immersive Mode</string>
    <string name="device_kitkat_immersive_summary">Enable Immersive Mode (Android 4.4 Kit Kat or newer required)</string>
    <string name="device_force_android_tv">Force Android TV Mode</string>
    <string name="device_force_android_tv_summary">Enables gamepad only control of the Emulator for non-touch screen devices</string>
    <string name="pref_input_device">Input (Method) Devices</string>
    <string name="input_device_inputmethod">Switch Current Input Device</string>
    <string name="input_device_inputmethod_summary">Choose the current input device from the Android System menu</string>
    <string name="input_device_enable_inputmethod">Use Input Method Device</string>
    <string name="input_device_enable_inputmethod_summary">Enables receiving input from the chosen Input Method Device</string>
    <string name="input_device_configuremap">Configure Input Mapping</string>
    <string name="input_device_configuremap_summary">Configure which input keys map to which emulator keys</string>
    <string name="pref_device_developer_category">Developer Options</string>
	<string name="pref_device_category">Device Options</string>
    <string name="device_developer_options">Toggle access to developer options</string>
    <string name="device_developer_options_summary">Enable experimental (potentially unstable) options</string>
    <string name="input_mouse_default_android">Old Android hardware mouse behaviour</string>
    <string name="input_mouse_default_android_summary">Hardware mice can click on-screen controls, but won\'t detect normal mouse clicks, requires holding LMB to move cursor</string>
    <string name="input_onscreen_hide_extra_joy_keys">Hide extra joystick keys</string>
    <string name="input_onscreen_hide_extra_joy_keys_summary">Hides the extra keys on the bottom right of the screen</string>
    <string name="input_onscreen_hide_shortcut_keys">Hide shortcut keys</string>
    <string name="input_onscreen_hide_shortcut_keys_summary">Hides the shortcut keys on the top right of the screen</string>
    <string name="input_onscreen_configureshortcutmap">Configure Shortcut Keys</string>
    <string name="input_onscreen_configureshortcutmap_summary">Configure on-screen keys mapping</string>
    <string name="input_onscreen_hide_joy">Hide Joystick</string>
    <string name="input_onscreen_hide_joy_summary">Hides the on-screen joystick</string>
    <string name="input_keyboard_sizeVX">Vertical on-screen keys size (width)</string>
    <string name="input_keyboard_sizeVX_summary">Vertical on-screen keys size (width)</string>
    <string name="input_keyboard_sizeVY">Vertical on-screen keys size (height)</string>
    <string name="input_keyboard_sizeVY_summary">Vertical on-screen keys size (height)</string>
    <string name="input_keyboard_sizeHX">Horizontal on-screen keys size (width)</string>
    <string name="input_keyboard_sizeHX_summary">Horizontal on-screen keys size (width)</string>
    <string name="input_keyboard_sizeHY">Horizontal on-screen keys size (height)</string>
    <string name="input_keyboard_sizeHY_summary">Horizontal on-screen keys size (height)</string>
    <string name="input_joysticks_fire_size">Size of On Screen Joystick Fire Button</string>
    <string name="input_joysticks_fire_size_summary">Default size is 1.0</string>
    <string name="midi">MIDI</string>
    <string name="pref_midi_options_category">MIDI Options</string>
    <string name="midi_out">Enable MIDI Out</string>
    <string name="midi_out_summary">Enable MIDI output</string>
    <string name="midi_st_reset">Reset MIDI synth on ST Reset</string>
    <string name="midi_st_reset_summary">Reset the MIDI synth when the ST is reset by the user</string>
    <string name="pref_midi_fluidsynth_category">Fluid-synth Settings</string>
    <string name="midi_fluidsynth_use_custom_sf">Use your own SoundFont</string>
    <string name="midi_fluidsynth_use_custom_sf_summary">Specify the custom SoundFont below</string>
    <string name="midi_fluidsynth_soundfont">Custom SoundFont (.sf2) Soundbank</string>
    <string name="midi_fluidsynth_reverb">Support Reverb</string>
    <string name="midi_fluidsynth_reverb_summary">Faster if disabled. (Reverb compatible SoundFont required)</string>
    <string name="midi_fluidsynth_chorus">Support Chorus</string>
    <string name="midi_fluidsynth_chorus_summary">Faster if disabled. (Chorus compatible SoundFont required)</string>
    <string name="midi_fluidsynth_interp">Interpolation Quality</string>
    <string name="midi_fluidsynth_maxpoly">Max Polyphony</string>
    <string name="midi_fluidsynth_volgain">Volume Gain</string>
    <string name="midi_fluidsynth_volgain_summary">Adjust volume gain of synth (clipping may occur if this is too high)</string>
    <string name="pref_midi_patches_category">MIDI Patches</string>
    <string name="midi_instrument_patches_configure">Load Instrument Patches</string>
    <string name="midi_instrument_patches_configure_summary">Setup and send program channel changes to the MIDI device</string>
    <string name="midi_drum_patches_configure">Load Drum Patches</string>
    <string name="midi_drum_patches_configure_summary">Setup and send drum configurations to the MIDI device</string>
    <string name="pref_midi_tweaks_category">Midi Tweaks</string>
    <string name="midi_tweak_ignore_pgm_changes">Ignore Midi Program Changes</string>
    <string name="midi_tweak_ignore_pgm_changes_summary">Ignore program changes sent to the synth (eg Karate Kid II sends program changes that aren\'t mapped nicely to GM instruments)</string>
    <string name="pref_midi_chan_transpose">Transpose Keys (semi-tones)</string>
    <string name="pref_midi_chan_transpose_summary">Transpose the midi output (eg Karate Kid 2 is actually tuned incorrectly)</string>
    <string name="pref_midi_setup_kk2tweaks">Auto-Setup options for Karate Kid 2</string>
    <string name="pref_midi_setup_kk2tweaks_summary">Setup recommended options for Karate Kid 2 (transpose, ignore program changes and instrument patches)</string>
	<string name="pref_midi_experimental">Experimental (DEV) options</string>
	<string name="midi_hardware_out">Output to USB MIDI device (experimental)</string>
	<string name="midi_hardware_out_summary">Send MIDI output to a connected MIDI device. Soft synth will be disabled</string>
	<string name="midi_hardware_in">Input from USB MIDI device (experimental)</string>
	<string name="midi_hardware_in_summary">Receive MIDI input from a connected MIDI device</string>
</resources>