<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	android:key="input_category_key"
	android:title="@string/input"
	android:persistent="false"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:robobunny="http://robobunny.com">

	<PreferenceCategory
		android:title="@string/pref_input_device"
		android:key="pref_input_device_category">
		<Preference
			android:persistent="true"
			android:key="pref_input_device_inputmethod"
			android:title="@string/input_device_inputmethod"
			android:summary="@string/input_device_inputmethod_summary"
			android:defaultValue="none" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_device_enable_inputmethod"
			android:title="@string/input_device_enable_inputmethod"
			android:summaryOn="@string/input_device_enable_inputmethod_summary"
			android:summaryOff="@string/input_device_enable_inputmethod_summary"
			android:defaultValue="false" />
		<Preference
			android:persistent="true"
			android:key="pref_input_device_configuremap"
			android:title="@string/input_device_configuremap"
			android:summary="@string/input_device_configuremap_summary"
			android:defaultValue="none" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_input_joysticks_category"
		android:key="pref_input_joysticks_category">
		<ListPreference android:key="pref_input_joystick_port"
						android:persistent="true"
						android:entries="@array/pref_input_joystick_port_entries"
						android:entryValues="@array/pref_input_joystick_port_values"
						android:dialogTitle="@string/input_joystick_port"
						android:title="@string/input_joystick_port"
						android:defaultValue="1" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_joysticks_vjstick"
			android:title="@string/input_joysticks_vjstick"
			android:summaryOn="@string/input_joysticks_vjstick_summary"
			android:summaryOff="@string/input_joysticks_vjstick_summary"
			android:defaultValue="true" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_joysticks_vjstick_floating"
			android:title="@string/input_joysticks_vjstick_floating"
			android:summaryOn="@string/input_joysticks_vjstick_floating_summary"
			android:summaryOff="@string/input_joysticks_vjstick_floating_summary"
			android:defaultValue="false" />
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_joysticks_vjstick_deadzone"
			android:title="@string/input_joysticks_deadzone"
			android:summary="@string/input_joysticks_deadzone_summary"
			android:defaultValue="40"
			android:max="100"
			robobunny:min="0"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_joysticks_vjstick_diag_sensitivity"
			android:title="@string/input_joysticks_diag_sensitivity"
			android:summary="@string/input_joysticks_diag_sensitivity_summary"
			android:defaultValue="50"
			android:max="100"
			robobunny:min="0"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<ListPreference android:key="pref_input_joysticks_autofirespd"
						android:persistent="true"
						android:entries="@array/pref_input_joysticks_autofirespd_entries"
						android:entryValues="@array/pref_input_joysticks_autofirespd_values" android:dialogTitle="@string/input_joysticks_autofire" android:title="@string/input_joysticks_autofire"
						android:defaultValue="Off" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_joysticks_maparrowkeys"
			android:title="@string/input_joysticks_maparrowkeys"
			android:summaryOn="@string/input_joysticks_maparrowkeys_summary"
			android:summaryOff="@string/input_joysticks_maparrowkeys_summary"
			android:defaultValue="false" />
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_joysticks_size"
			android:title="@string/input_joysticks_size"
			android:summary="@string/input_joysticks_size_summary"
			android:defaultValue="130"
			android:max="200"
			robobunny:min="10"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_joysticks_fire_size"
			android:title="@string/input_joysticks_fire_size"
			android:summary="@string/input_joysticks_fire_size_summary"
			android:defaultValue="130"
			android:max="200"
			robobunny:min="10"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>

	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_input_mouse_category"
		android:key="pref_input_mouse_category">
		<ListPreference android:key="pref_input_mouse_emutype"
						android:persistent="true"
						android:dialogTitle="@string/mouseemutype" android:title="@string/mouseemutype"
						android:entries="@array/pref_input_mouse_emutype_entries"
						android:entryValues="@array/pref_input_mouse_emutype_values"
						android:defaultValue="buttons"/>
		<ListPreference android:key="pref_input_mouse_speed"
						android:persistent="true"
						android:dialogTitle="@string/mousespeed" android:title="@string/mousespeed"
						android:entries="@array/pref_input_mouse_speed_entries"
						android:entryValues="@array/pref_input_mouse_speed_values"
						android:defaultValue="1"/>
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_mouse_default_android"
			android:title="@string/input_mouse_default_android"
			android:summaryOn="@string/input_mouse_default_android_summary"
			android:summaryOff="@string/input_mouse_default_android_summary"
			android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_input_onscreen_category"
		android:key="pref_input_onscreen_category">
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_onscreen_alpha"
			android:title="@string/input_onscreen_alpha"
			android:summary="@string/input_onscreen_alpha_summary"
			android:defaultValue="65"
			android:max="100"
			robobunny:min="0"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_onscreen_joy_alpha"
			android:title="@string/input_onscreen_joy_alpha"
			android:summary="@string/input_onscreen_joy_alpha_summary"
			android:defaultValue="65"
			android:max="100"
			robobunny:min="0"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_onscreen_autohide"
			android:title="@string/input_onscreen_autohide"
			android:summaryOn="@string/input_onscreen_autohide_summary"
			android:summaryOff="@string/input_onscreen_autohide_summary"
			android:defaultValue="false" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_onscreen_hide_all"
			android:title="@string/input_onscreen_hide_all"
			android:summaryOn="@string/input_onscreen_hide_all_summary"
			android:summaryOff="@string/input_onscreen_hide_all_summary"
			android:defaultValue="false" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_onscreen_hide_joy"
			android:title="@string/input_onscreen_hide_joy"
			android:summaryOn="@string/input_onscreen_hide_joy_summary"
			android:summaryOff="@string/input_onscreen_hide_joy_summary"
			android:defaultValue="false" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_onscreen_only_joy"
			android:title="@string/input_onscreen_only_joy"
			android:summaryOn="@string/input_onscreen_only_joy_summary"
			android:summaryOff="@string/input_onscreen_only_joy_summary"
			android:defaultValue="false" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_onscreen_hide_extra_joy_keys"
			android:title="@string/input_onscreen_hide_extra_joy_keys"
			android:summaryOn="@string/input_onscreen_hide_extra_joy_keys_summary"
			android:summaryOff="@string/input_onscreen_hide_extra_joy_keys_summary"
			android:defaultValue="false" />
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_onscreen_hide_shortcut_keys"
			android:title="@string/input_onscreen_hide_shortcut_keys"
			android:summaryOn="@string/input_onscreen_hide_shortcut_keys_summary"
			android:summaryOff="@string/input_onscreen_hide_shortcut_keys_summary"
			android:defaultValue="false" />
		<Preference
			android:persistent="true"
			android:key="pref_input_onscreen_configureshortcutmap"
			android:title="@string/input_onscreen_configureshortcutmap"
			android:summary="@string/input_onscreen_configureshortcutmap_summary"
			android:defaultValue="none" />

	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/pref_input_keyboard_category"
		android:key="pref_input_keyboard_category">
		<CheckBoxPreference
			android:persistent="true"
			android:key="pref_input_keyboard_obsession_keys"
			android:title="@string/input_keyboard_obsession_keys"
			android:summaryOn="@string/input_keyboard_obsession_keys_summary"
			android:summaryOff="@string/input_keyboard_obsession_keys_summary"
			android:defaultValue="false" />
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_keyboard_sizeVX"
			android:title="@string/input_keyboard_sizeVX"
			android:summary="@string/input_keyboard_sizeVX_summary"
			android:defaultValue="100"
			android:max="200"
			robobunny:min="10"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_keyboard_sizeVY"
			android:title="@string/input_keyboard_sizeVY"
			android:summary="@string/input_keyboard_sizeVY_summary"
			android:defaultValue="100"
			android:max="200"
			robobunny:min="10"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_keyboard_sizeHX"
			android:title="@string/input_keyboard_sizeHX"
			android:summary="@string/input_keyboard_sizeHX_summary"
			android:defaultValue="100"
			android:max="200"
			robobunny:min="10"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>
		<com.RetroSoft.Hataroid.Preferences.SeekBarPreference
			android:persistent="true"
			android:key="pref_input_keyboard_sizeHY"
			android:title="@string/input_keyboard_sizeHY"
			android:summary="@string/input_keyboard_sizeHY_summary"
			android:defaultValue="100"
			android:max="200"
			robobunny:min="10"
			robobunny:unitsLeft=""
			robobunny:unitsRight=" %"
			/>

	</PreferenceCategory>
</PreferenceScreen>
